# personal_agent

./: .env.clean  .env.example  .env.minimal  .env.save  .env.secrets.template  .gitignore  AGNO_AGENT_REFACTORING_PLAN.md  ARCHITECTURE_ANALYSIS_KNOWLEDGE_INGESTION.md  BIDIRECTIONAL_TOPIC_CLASSIFICATION_BREAKTHROUGH.md  CENTRALIZED_MEMORY_CLEARING_IMPLEMENTATION_SUMMARY.md  CHANGELOG.md  CHANGELOG.md.bak  CHANGELOG_UPDATE.md  CLAUDE.md  CLEANUP_SUMMARY.md  COMMIT.md  COMMIT_MESSAGE  COMPREHENSIVE_MEMORY_SYSTEM_TECHNICAL_SUMMARY.md  DOCKER_RESTART_FIX_SUMMARY.md  DOCKER_SMART_RESTART_IMPLEMENTATION_SUMMARY.md  ENHANCED_MEMORY_IMPLEMENTATION.md  ENVIRONMENT_VARIABLE_CONSOLIDATION.md  ENV_CLEANUP_SUMMARY.md  EXECUTIVE_SUMMARY.md  FILESYSTEM_TOOLS_FIX.md  FIX_SUMMARY.md  GEMINI.md  GIT_DIFF_ANALYSIS_SUMMARY.md  INSTRUCTION_ANALYSIS.md  INSTRUCTION_ANALYSIS_INDEX.md  INSTRUCTION_ANALYSIS_SUMMARY.txt  ISSUES.md  JSON_FORMAT_FIX_SUMMARY.md  KNOWLEDGE_COORDINATOR_IMPLEMENTATION_SUMMARY.md  KNOWLEDGE_SEARCH_FIX_SUMMARY.md  LICENSE  LIGHTRAG_DELETION_SOLUTION_SUMMARY.md  LIGHTRAG_MEMORY_SERVER_FIX_SUMMARY.md  LIGHTRAG_PORT_CONFIGURATION_FIX_SUMMARY.md  LIGHTRAG_TIMEOUT_FIX_SUMMARY.md  (+373 more)
.gemini/: settings.json
.github/: copilot-instructions.md
.streamlit/: config.toml
analysis/: final_streaming_analyzer.py  streaming_response_analyzer.py  test_full_smolagents.py  tool_calling_report.json  tool_calling_report.md
brochure/: ARCHITECTURE.md  EXECUTIVE_SUMMARY.md  ONE_PAGER.md  PERSONAL_AGENT_BROCHURE.aux  PERSONAL_AGENT_BROCHURE.md
config.ini/: config.ini
dashboard-docker/: .dockerignore  Dockerfile  README.md  build.sh  dashboard.py  docker-compose.yml  personal_agent-0.2.4-py3-none-any.whl  requirements.txt  run.sh
data/: personal_agent_memory.db
docs/: CONFIGURATION_REFACTOR.md  ENUM_MEMORY_STATUS_IMPLEMENTATION.md  INSTRUCTION_LEVEL_PERFORMANCE_ANALYSIS_qwen.md  LIGHTRAG_DECOUPLING_DESIGN.md  LM_STUDIO_PROVIDER.md  MEMORY_IMPROVEMENT_PLAN.md  MEMORY_SEARCH_FIX_SUMMARY.md  MEMORY_TOPIC_SYNC_PLAN.md  MULTI_USER_DESIGN.md  OLLAMA_SERVER_SELECTION.md  PORT_9623_CONNECTION_FIX.md  PROJECT_SUMMARY.md  RATE_LIMITING_GUIDE.md  README_SWITCH_USER.md  README_enhanced_lightrag_deletion.md  README_lightrag_docmgr.md  README_lightrag_docmgr_v2.md  README_personal_facts.md  REFACTORED_AGENT_ARCHITECTURE.md  REFACTORING_ANALYSIS.md  REFACTOR_SUMMARY.md  SEMANTIC_MEMORY_MANAGER.md  STREAMLIT_SEMANTIC_MEMORY_INTEGRATION.md  TECHNICAL_ARCHITECTURE.md  TECHNICAL_SUMMARY.md  TOOL_ARCHITECTURE_MODERNIZATION.md  index.html  migration_notes.md  personal_agent.html  search.js  semantic_duplicate_fix.md  user_profile.md
eric/: eric_facts.json
examples/: 06_agent_with_memory.py  06_agent_with_memory_ollama.py  07_memory_optimized_ollama_agent.py  08_enhanced_memory_with_agno.py  09_simple_memory_test.py  10_memory_duplication_test.py  11_anti_duplicate_memory_test.py  12_enhanced_ollama_agent_example.py  README_workflow_examples.md  agent_with_memory_streamlit.py  agent_with_memory_whatsapp.py  agent_with_storage.py  async_ollama.py  book.txt  config_example.py  enhanced_user_management_demo.py  example_rest_api_usage.py  github_agent_streamlit.py  lightrag_ollama.py  lightrag_ollama_demo_fixed.py  lightrag_ollama_demo_pdf_fixed.py  mcp_tools_examples.py  memory_comparison.py  memory_comparison_fair.py  multi_agent_example.py  ollama_memory_demo.py  personal_agent_team_demo.py  run_agno_specialized_agents.py  team_with_intermediate_steps.py  teams_demo.py  tool_agent_example.py  workflow_memory_writer_example.py
lightrag_memory_server/: config.ini  docker-compose.yml  env.memory.example  env.memory_server  env.orig  env.save
lightrag_server/: config.ini  docker-compose.yml  env.example  env.orig  env.save  env.server
memory_tests/: README.md  debug_memory_search.py  enhanced_memory_search.py  run_cli_memory_tests.sh  test_centralized_memory_clearing.py  test_cli_memory_commands.py  test_complete_memory_solution.py  test_comprehensive_memory_search.py  test_create_or_update_memories.py  test_enhanced_search.py  test_eric_memory_facts.py  test_fixed_memory_agent.py  test_memory_functionality.py  test_memory_query_fix.py  test_memory_system_comprehensive.py  test_semantic_memory_manager.py  test_streamlit_memory_search.py
modelfiles/: Llama31.Tools.Modelfile  Llama32.Tools.Modelfile  llama31_8b.Modelfile  llama32_tools.Modelfile  qwen34b_unsloth.Modelfile  qwen3b.Modelfile
old/: debug_member_ids.py  mcp.json  memory_manager_tool.py  multi_agent_system.py  multiple_tools.py  persag_app.py  personal_agent.py  restart-lightrag.sh  specialized_agents.py  test_agent_direct_memory_access.py  test_knowledge_tools_integration.py
refs/: AGNO_AGENT_LAZY_INITIALIZATION_REFACTORING.md  ARCHITECTURE_ANALYSIS_AND_RECOMMENDATIONS.md  ATOMIC_CONFIG_TRANSACTIONS_FOR_UI_STABILITY.md  CODEGPT_REFACTOR_ANALYSIS.md  COMPREHENSIVE_PROJECT_SUMMARY.md  CREATE_OR_UPDATE_MEMORIES_IMPLEMENTATION.md  DASHBOARD_USER_SWITCH_API_REFACTORING.md  DATA_DIR_USAGE_FIXES_SUMMARY.md  DEEPSEEK_R1_TOOL_CALLING_FIX.md  DELTA_YEAR_INTEGRATION_FIX.md  DIAGNOSTICS_PLAN.md  DOCKER_RESTART_ENVIRONMENT_VARIABLE_FIX_SUMMARY.md  DUAL_STORAGE_MEMORY_RESTATEMENT.md  DUPLICATE_TOOL_CALL_FIX_SUMMARY.md  DYNAMIC_CONTEXT_SIZING.md  DYNAMIC_PATH_RESOLUTION_FIX_SUMMARY.md  ELEVATOR_PITCH.md  ENHANCED_MEMORY_RETRIEVAL_SUMMARY.md  ENVIRONMENT_VARIABLE_CONSOLIDATION.md  EXECUTIVE_SUMMARY.md  Fix_Memory_List_Shortcut_Guide.md  GRANITE_LLM_STANDARDIZATION_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  INPUT_TEXT_PARAMETER_SIGNATURE_FIX.md  INSTALLER_IDEMPOTENCY_AND_DOCKER_FIXES.md  INSTALL_SCRIPT_REFACTORING_SUMMARY.md  INSTRUCTION_IMPLEMENTATION_GUIDE.md  INSTRUCTION_RECOMMENDATIONS_SUMMARY.md  INSTRUCTION_TESTS_FIXED.md  KNOWLEDGE_INGESTION_CONSOLIDATION_SUMMARY.md  KNOWLEDGE_INGESTION_FILE_PATH_FIX.md  KNOWLEDGE_INGESTION_GUIDE.md  KNOWLEDGE_QUERY_DEBUG_SUMMARY.md  KNOWLEDGE_QUERY_LOCAL_MODE_FIX.md  LIGHTRAG_DECOUPLING_DESIGN.md  LIGHTRAG_ENVIRONMENT_CLEANUP_SUMMARY.md  LIGHTRAG_PORT_CONFIGURATION_FIX_SUMMARY.md  (+93 more)
tmp/: agent.db  (+12 more)
(+667 files in other folders)
