[tool.poetry]
name = "personal-agent"
version = "0.8.5"
license = "GPL-3.0-only"
description = "Personal AI agent with MCP and Memory, powered by Agno and Ollama"
authors = ["Eric Suchanek <suchanek@mac.com>"]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
langchain = "^0.3.0"
langchain-ollama = "^0.3.3"
langchain-community = "^0.3.0"
weaviate-client = "^4.8.1"
flask = "^3.0.3"
hypercorn = "^0.17.3"
requests = "^2.32.3"
langchain-weaviate = "^0.0.4"
rich = "^14.0.0"
python-dotenv = "^1.1.0"
smolagents = "^1.17.0"
litellm = "^1.71.3"
markdownify = "^1.1.0"
pathlib = "^1.0.1"
duckduckgo-search = "^8.0.2"
duckdb = "^1.3.0"
yfinance = "^0.2.61"
agno = "^1.5.8"
mcp = "^1.9.2"
pgvector = "^0.4.1"
ollama = "^0.5.1"
openai = "^1.86.0"
lxml-html-clean = "^0.4.2"
arxiv = "^2.2.0"
newspaper4k = "^0.9.3.1"
pypdf = "^5.6.1"
lancedb = "^0.24.0"
streamlit = "^1.46.0"
tantivy = "^0.24.0"
networkx = "^3.5"
graspologic = "^3.4.1"
pylance = "^0.30.0"
watchdog = "^6.0.0"
fastapi = "^0.115.14"
jwt = "^1.4.0"
aiofiles = "^24.1.0"
nest-asyncio = "^1.6.0"
googlesearch-python = "^1.3.0"
pycountry = "^24.6.1"
lightrag-hku = "^1.3.9"

[tool.poetry.scripts]
personal-agent-langchain = "src.personal_agent.main:main"
pagl_cli = "src.personal_agent.main:cli_main"
personal-agent-langchain-cli = "src.personal_agent.main:cli_main"
paglc = "src.personal_agent.main:cli_main"

personal-agent-smolagent = "src.personal_agent.smol_main:run_smolagents_web"
pags = "src.personal_agent.smol_main:run_smolagents_web"
personal-agent-smolagent-cli = "src.personal_agent.smol_main:cli_main"
pags_cli = "src.personal_agent.smol_main:cli_main"

personal-agent = "src.personal_agent.web.agno_interface:main"
paga = "src.personal_agent.web.agno_interface:main"
personal-agent-agno-cli = "src.personal_agent.agno_main:cli_main"
paga_cli = "src.personal_agent.agno_main:cli_main"

install-mcp-servers = "scripts.install_mcp:main"
test-mcp-servers = "tests.test_mcp_availability:main"
test-tools = "tests.test_tools:main"
store-fact = "scripts.store_fact:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
