[tool.poetry]
name = "personal-agent"
version = "v0.8.76"
description = "Personal AI agent with MCP and Memory, powered by Agno, LightRAG and Ollama"
authors = ["Eric Suchanek <suchanek@mac.com>"]
readme = "README.md"
homepage = "https://github.com/suchanek/personal_agent"
repository = "https://github.com/suchanek/personal_agent"
keywords = ["personal-agent", "mcp", "memory", "ollama", "langchain"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
langchain = "^0.3.0"
langchain-ollama = "^0.3.3"
langchain-community = "^0.3.0"
weaviate-client = "^4.8.1"
flask = "^3.0.3"
hypercorn = "^0.17.3"
requests = "^2.32.3"
langchain-weaviate = "^0.0.4"
rich = "^14.0.0"
python-dotenv = "^1.1.0"
smolagents = "^1.17.0"
litellm = "^1.71.3"
markdownify = "^1.1.0"
duckduckgo-search = "^8.0.2"
duckdb = "^1.3.0"
yfinance = "^0.2.61"
agno = "^1.5.8"
mcp = "^1.9.2"
pgvector = "^0.4.1"
ollama = "^0.5.1"
openai = "^1.86.0"
lxml-html-clean = "^0.4.2"
arxiv = "^2.2.0"
newspaper4k = "^0.9.3.1"
pypdf = "^5.6.1"
lancedb = "^0.24.0"
streamlit = "^1.46.0"
tantivy = "^0.24.0"
networkx = "^3.5"
graspologic = "^3.4.1"
pylance = "^0.30.0"
watchdog = "^6.0.0"
fastapi = "^0.115.14"
jwt = "^1.4.0"
aiofiles = "^24.1.0"
nest-asyncio = "^1.6.0"
googlesearch-python = "^1.3.0"
pycountry = "^24.6.1"
lightrag-hku = "^1.3.9"
pyyaml = "^6.0.2"
spacy = "^3.0.0"
pytest = "^8.4.1"
docker = "^7.1.0"
plotly = "^6.2.0"
python-dateutil = "^2.9.0.post0"
pygithub = "^2.6.1"
google-genai = "^1.26.0"
groq = "^0.30.0"
prompt-toolkit = "^3.0.51"
anthropic = "^0.59.0"
e2b-code-interpreter = "^1.5.2"
openai-harmony = "^0.0.3"
psutil = "^7.0.0"
pip = "^25.2"
qwen-agent = {extras = ["code-interpreter"], version = "^0.0.29"}
ddgs = "^9.5.5"
pdoc = "^15.0.4"
huggingface-hub = "^0.35.3"
pylint = "^4.0.3"
pytest-asyncio = "^1.3.0"

[tool.poetry.scripts]
personal-agent-langchain = "src.personal_agent.main:main"
pagl_cli = "src.personal_agent.main:cli_main"
personal-agent-langchain-cli = "src.personal_agent.main:cli_main"
paglc = "src.personal_agent.main:cli_main"

personal-agent-smolagent = "src.personal_agent.smol_main:run_smolagents_web"
pags = "src.personal_agent.smol_main:run_smolagents_web"
personal-agent-smolagent-cli = "src.personal_agent.smol_main:cli_main"
pags_cli = "src.personal_agent.smol_main:cli_main"

personal-agent = "src.personal_agent.web.agno_interface:main"
paga = "src.personal_agent.web.agno_interface:main"
personal-agent-agno-cli = "src.personal_agent.agno_main:cli_main"
paga_cli = "src.personal_agent.agno_main:cli_main"

paga_team_cli = "src.personal_agent.team.reasoning_team:cli_main"
rteam-cli = "src.personal_agent.team.reasoning_team:cli_main"

install-mcp-servers = "scripts.install_mcp:main"
test-mcp-servers = "tests.test_mcp_availability:main"
test-tools = "tests.test_tools:main"
store-fact = "scripts.store_fact:main"

[tool.poetry.group.dev.dependencies]
poethepoet = "^0.36.0"

# Poe the Poet task configuration
[tool.poe.tasks]
[tool.poe.tasks.status]
help = "Display current user status"
cmd = "python switch-user.py --status"

# === Core Application Tasks ===
[tool.poe.tasks.serve]
help = "Start the simple personal agent interface"
cmd = "streamlit run src/personal_agent/web/agno_interface.py"
args = [
  { name = "port", options = ["--server.port"], default = "8501", help = "Port to serve on" },
  { name = "host", options = ["--server.address"], default = "localhost", help = "Host to bind to" }
]

[tool.poe.tasks.serve-persag]
help = "Start the Personal Agent Streamlit interface (PAGA) - defaults to team mode"
shell = """
streamlit run src/personal_agent/tools/paga_streamlit_agno.py \
  ${port:+--server.port $port} \
  ${host:+--server.address $host} \
  -- \
  ${remote:+--remote} \
  ${debug:+--debug} \
  ${recreate:+--recreate} \
  ${single:+--single} \
  ${provider:+--provider $provider}
"""
args = [
  { name = "port", options = ["--port"], help = "Port to serve on (default: 8501)" },
  { name = "host", options = ["--host"], help = "Host to bind to (default: localhost)" },
  { name = "remote", options = ["--remote"], type = "boolean", help = "Use remote Ollama URL instead of local" },
  { name = "debug", options = ["--debug"], type = "boolean", help = "Enable debug mode" },
  { name = "recreate", options = ["--recreate"], type = "boolean", help = "Recreate the knowledge base and clear all memories" },
  { name = "single", options = ["--single"], type = "boolean", help = "Launch in single-agent mode (default is team mode)" },
  { name = "provider", options = ["--provider"], help = "Set the LLM provider (ollama, lm-studio, or openai)" }
]

[tool.poe.tasks.serve-persag-team]
help = "Start the Persag Team Streamlit interface"
cmd = "streamlit run tools/paga_streamlit_team.py"
args = [
  { name = "port", options = ["--server.port"], default = "8501", help = "Port to serve on" },
  { name = "host", options = ["--server.address"], default = "localhost", help = "Host to bind to" }
]

# === CLI Interface Tasks ===
[tool.poe.tasks.cli]
help = "Run CLI interface"
cmd = "poetry run paga_cli"


[tool.poe.tasks.team]
help = "Run reasoning team CLI"
cmd = "poetry run rteam-cli"

# === MCP Server Management ===
[tool.poe.tasks.mcp-install]
help = "Install MCP servers"
cmd = "python scripts/install_mcp.py"

[tool.poe.tasks.mcp-test]
help = "Test MCP server availability"
cmd = "python tests/test_mcp_availability.py"

[tool.poe.tasks.mcp-setup]
help = "Install and test MCP servers"
sequence = ["mcp-install", "mcp-test"]

# === Testing Tasks ===
[tool.poe.tasks.test]
help = "Run all tests"
cmd = "pytest"
args = [
  { name = "path", positional = true, default = "tests/", help = "Test path or file" },
  { name = "verbose", options = ["-v", "--verbose"], type = "boolean", help = "Verbose output" },
  { name = "coverage", options = ["-c", "--coverage"], type = "boolean", help = "Run with coverage" }
]

[tool.poe.tasks.test-tools]
help = "Test available tools"
cmd = "test-tools"

[tool.poe.tasks.test-unit]
help = "Run unit tests"
cmd = "pytest tests/unit -v"

[tool.poe.tasks.test-integration]
help = "Run integration tests"
cmd = "pytest tests/integration -v"

[tool.poe.tasks.test-memory]
help = "Run memory system tests"
cmd = "pytest memory_tests/ -v"

[tool.poe.tasks.test-all]
help = "Run comprehensive test suite"
sequence = ["test-unit", "test-integration", "test-memory", "test-tools", "mcp-test"]

# === Memory and Knowledge Management ===
[tool.poe.tasks.store-fact]
help = "Store a fact in the knowledge base"
cmd = "store-fact"
args = [
  { name = "fact", positional = true, help = "Fact to store" },
  { name = "category", options = ["-c", "--category"], help = "Fact category" }
]

[tool.poe.tasks.memory-clean]
help = "Clean memory system"
script = "src.personal_agent.tools.memory_cleaner:main"

[tool.poe.tasks.restart-lightrag]
help = "Smart restart LightRAG server"
shell = "./smart-restart-lightrag.sh"

# === Analysis and Debugging ===
[tool.poe.tasks.analyze]
help = "Run comprehensive analysis"
cmd = "python analysis/test_comprehensive_research.py"


# === Streamlit Dashboard ===
[tool.poe.tasks.dashboard]
help = "Start Streamlit dashboard"
cmd = "streamlit run src/personal_agent/streamlit/dashboard.py --server.port 8502"
args = [
  { name = "port", options = ["--server.port"], default = "8502", help = "Streamlit port" }
]

# === Utility Tasks ===
[tool.poe.tasks.config]
help = "Display Personal Agent configuration"
cmd = "python -m src.personal_agent.tools.show_config"
args = [
  { name = "no-color", options = ["--no-color"], type = "boolean", help = "Disable colored output" },
  { name = "json", options = ["--json"], type = "boolean", help = "Output configuration as JSON" }
]

[tool.poe.tasks.show-config]
help = "Show the current configuration"
cmd = "python tools/show-config.py"

[tool.poe.tasks.clean]
help = "Clean up temporary files and caches"
sequence = [
  { cmd = "find . -type d -name '__pycache__' -exec rm -rf {} + || true" },
  { cmd = "find . -name '*.pyc' -delete || true" },
  { cmd = "find . -name '.pytest_cache' -exec rm -rf {} + || true" }
]

# === Environment Management ===

[tool.poe.tasks.switch-user]
help = "Switch or create user configurations"
cmd = "python switch-user.py"
args = [
  {name = "user_id", positional = true, help = "User ID to switch to"},
  {name = "user_name", options = ["--user-name"], help = "Display name for new users"},
  {name = "user_type", options = ["--user-type"], help = "User type for new users"},
  {name = "birth_date", options = ["--birth-date"], help = "Birth date in YYYY-MM-DD format"},
  {name = "gender", options = ["--gender"], help = "Gender (Male, Female, or N/A)"},
  {name = "cognitive_state", options = ["--cognitive-state"], type = "integer", help = "Cognitive state (0-100, default: 100)"},
  {name = "npc", options = ["--npc"], type = "boolean", help = "Mark as NPC/bot user"},
  {name = "no_restart", options = ["--no-restart"], type = "boolean", help = "Don't restart LightRAG services"},
  {name = "no_system_restart", options = ["--no-system-restart"], type = "boolean", help = "Don't restart the agent/team system"},
  {name = "status", options = ["--status"], type = "boolean", help = "Display user status"},
  {name = "create_only", options = ["--create-only"], type = "boolean", help = "Only create the user"},
  {name = "list", options = ["--list"], type = "boolean", help = "Display all users"},
  {name = "yes", options = ["-y", "--yes"], type = "boolean", help = "Auto-confirm user creation"}
]

[tool.poe.tasks.switch-user-status]
help = "Display current user status"
cmd = "python switch-user.py --status"

[tool.poe.tasks.list-users]
help = "Display all users in the system"
cmd = "python switch-user.py --list"

[tool.poe.tasks.setup]
help = "Run first-time user profile setup (interactive)"
shell = "./first-run-setup.sh"

[tool.poe.tasks.switch-ollama]
help = "Switch Ollama configuration"
shell = "./switch-ollama.sh"

# === Examples and Demos ===
[tool.poe.tasks.demo-memory]
help = "Run memory system demo"
cmd = "python examples/15_memory_demo.py"

[tool.poe.tasks.demo-team]
help = "Run team demo"
cmd = "python examples/personal_agent_team_demo.py"

[tool.poe.tasks.example-mcp]
help = "Run MCP tools example"
cmd = "python examples/mcp_tools_examples.py"

# === Ollama Service Management ===
[tool.poe.tasks.ollama-status]
help = "Check Ollama service status"
cmd = "./ollama-service.sh status"

[tool.poe.tasks.ollama-start]
help = "Start Ollama service"
cmd = "./ollama-service.sh start"

[tool.poe.tasks.ollama-stop]
help = "Stop Ollama service"
cmd = "./ollama-service.sh stop"

[tool.poe.tasks.ollama-restart]
help = "Restart Ollama service"
cmd = "./ollama-service.sh restart"

[tool.poe.tasks.ollama-models]
help = "List available Ollama models"
cmd = "./ollama-service.sh models"

[tool.poe.tasks.ollama-logs]
help = "View Ollama output logs"
cmd = "./ollama-service.sh logs"

# === User Registry Management ===
[tool.poe.tasks.registry-status]
help = "Show user registry status"
cmd = "python registry-manager.py --status"

[tool.poe.tasks.registry-discover]
help = "Discover users from filesystem"
cmd = "python registry-manager.py --discover"

[tool.poe.tasks.registry-rebuild]
help = "Rebuild registry from filesystem + existing data"
cmd = "python registry-manager.py --rebuild"

[tool.poe.tasks.registry-rebuild-dry]
help = "Preview registry rebuild (dry run)"
cmd = "python registry-manager.py --rebuild --dry-run"

# === Quick Start Tasks ===
[tool.poe.tasks.quick-start]
help = "Quick start for new users"
sequence = ["mcp-setup", "demo-memory", "serve"]

[tool.poe.tasks.full-demo]
help = "Full system demonstration"
sequence = ["mcp-setup", "demo-memory", "demo-team", "example-mcp"]

# === Documentation ===
[tool.poe.tasks.docs]
help = "Generate project documentation using pdoc"
shell = "cd src && pdoc --o ../docs --logo ../docs/logo.png personal_agent"

[tool.pylint.messages_control]
disable = [
    "C0301",  # line-too-long
    "W0621",  # redefined-outer-name
    "C0103",  # invalid-name
    "W0703",  # broad-except (catching Exception)
    "W0718",  # broad-exception-caught
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
